syntax = "proto3";
package gravitynft.v1;

option go_package = "github.com/Gravity-Bridge/Gravity-Bridge/module/x/gravitynft/types";

// LastObservedNFTEthereumBlockHeight stores the last observed
// Ethereum block height along with the Cosmos block height that
// it was observed at. These two numbers can be used to project
// outward and always produce batches with timeouts in the future
// even if no Ethereum block height has been relayed for a long time
message LastObservedNFTEthereumBlockHeight {
    uint64 cosmos_block_height   = 1;
    uint64 ethereum_block_height = 2;
}

// TODO: Do we need UnhaltBridgeProposal?

// TODO: Do we need IBCMetadataProposal?

message PendingNFTIbcAutoForward {
    string foreign_receiver = 1;         // the destination address. sdk.AccAddress does not preserve foreign prefixes
    string class_id = 2;                 // the x/nft class id for the NFT token
    string token_id = 3;                 // the token id of the ERC721 token
    string ibc_channel = 4;              // the IBC channel to send the NFT over via nft-transfer module
    uint64 event_nonce = 5;              // the EventNonce from the MsgSendNFTToCosmosClaim, used for ordering the queue
}

